# poetry-private-registry-sample

./: .pypirc  pyproject.toml
.github/: dependabot.yml
example_project/: __init__.py  main.py
