[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_project"
version = "0.1.0"
description = "An example Python project."
authors = [
    { name = "Harihran", email = "thavaahariharangit@github.com" }
]
dependencies = [
    "structlog==24.1.0"
]
requires-python = ">=3.12"

[tool.poetry]
name = "example_project"
version = "0.1.0"
description = "An example Python project."
authors = ["Harihran <thavaahariharangit@github.com>"]
packages = [
    { include = "example_project" }
]
